[package]
name = "devtodo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Removed "rt", kept "macros" for your instruction handlers
actix-web = { version = "4", features = ["macros"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
once_cell = "1.21"
uuid = { version = "1.13", features = ["v4", "serde"] } # Added v4 for task IDs
chrono = { version = "0.4", features = ["serde"] }    # Added serde for JSON dates